--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Texto <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Primera página</title>
   </head>
   <body>
 
