--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
-Texto <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Primera página</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Blog HTML</title>
+        <meta charset="UTF-8">
+    <body>
+        <h1>
+            Blog en HTML de Walter Motta
+        </h1>
 
-  </body>
+        <p>
+            Con este documento de HTML 5 pruebo que al menos se lo basico de este lenguaje
+             de marcación para la programación y diseño de pagina Web.
+        </p>
+
+        <a href="https://cibernarium.barcelonactiva.cat/">Link para ingresar a la Web de 
+            Barcelona Activa </a>
+        <br>
+        <img src="WALTER.jpg" alt="Con mis dos hijos visitando MontJuic en Barcelona." width="800" height="600">
+
+         <h2>Visitando Montjuic con mis dos hijos.</h2>
+        <br>
+        <button>Me gusta</button>
+        
+        <h2>"Estos son mis hobbies"</h2>
+
+        <ul>
+            <li>Jugar futbol sala.</li>
+            <li>Ver Películas de comédia en familia.</li>
+            <li>Leér la Bíblia e investigár. </li>
+            <li>Visitar sitios turísticos.</li>
+        </ul>
+
+        <h2>"Estos son mis estudios certificados"</h2>
+
+        <ol>
+            <li>Bachiller Técnico en Gestión empresarial</li>
+            <li>Técnico profesional en Instalación de redes para computadoras.</li>
+            <li>Catalán B1.</li>
+            <li>Cursos de programación en barcelona activa.</li>
+        </ol>
+        <br>
+        <p style="color:aqua">Estoy a la espera de que me salga la residencia en España para trabajar legal</p>
+        <br>
+        <p title="Soy una sugerencia">Esto es un parrafo con una sugerencia, pasa el mouse por encima de mí.</p>
+        <hr>
+        <h1 style="font-size:80px;">Para personalizar el tamaño de los encabezados</h1>
+        <hr>
+
+
+
+
+       
+
+
+
+
+
+
+
+    </body>
 </html>
